finally fixed a bug on the images not showing on the web

--- a/src/globals/_basics.scss
+++ b/src/globals/_basics.scss
@@ -15,7 +15,7 @@ body{
 	height: 100vh;
 	margin: 0 auto;
 	align-items: center;
-	padding-top: 80px;
+	padding-top: 20px;
 }
 
 main{
