--- a/src/globals/_section-home.scss
+++ b/src/globals/_section-home.scss
@@ -7,10 +7,16 @@
 
 	.image{
 		width: 100%;
-		height: 100px;
+		height: auto;
+
+		img{
+			width: 100%;
+			object-fit: cover;
+		}
 	}
 
 	h1{
+		color: $Very-dark-blue;
 		width: 30%;
 		height: auto;
 		text-align: left;
@@ -29,6 +35,7 @@
 		justify-content: space-between;
 
 		p{
+			color: $Dark-grayish-blue;
 			font-size: 1.1rem;
 			padding-bottom: 10px;
 			margin: 5px auto;
@@ -49,6 +56,7 @@
 
 		.btn:hover{
 			background-color: $Soft-red;
+			cursor: pointer;
 		}
 	}
 }
